<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">UzMobile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Telegram kanal</string>
    <string name="menu_gallery">Biz bilan aloqa</string>
    <string name="menu_slideshow">Ulashish</string>
    <string name="menu_favorites">Baholash</string>
    <string name="menu_info">Biz Haqimizda</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="biz_bilan_aloqa">Biz bilan aloqa</string>
    <string name="ussd">USSD</string>
    <string name="tarif">Tarif</string>
    <string name="xizmat">Xizmat</string>
    <string name="minut">Minut</string>
    <string name="internet">Internet</string>
    <string name="sms">SMS</string>
    <string name="milliy_operator">Milliy operator</string>
    <string name="uzmobile">UzMobile</string>
    <string name="balans">Balans</string>
    <string name="operator">Operator</string>
    <string name="yangiliklar">Yangiliklar</string>
    <string name="sozlamalar">Sozlamalar</string>
    <string name="permission">Iltimos Ruxsat bering</string>
    <string name="ok">Ok</string>
    <string name="no">Yo\'q</string>
    <string name="orqaga">ORQAGA</string>
    <string name="xat_jo_natish">XAT JO\'NATISH</string>
    <string name="hello">Mazkur ilova Uzmobile operatori mijozlariga qulaylik yaratish maqsadida ishlab chiqilgan bo\'lib sizning shaxsiy hisob varaqangizga
     va raqamingizga hech qanday zararli tomoni yo\'q Savol va takliflar bo\'lsa @ussdchat Telegram orqali yozishingiz mumkin</string>
    <string name="biz_haqimizda">Biz haqimizda</string>
    <string name="month_summ">so\'m oyiga</string>
    <string name="min">MIN</string>
    <string name="sms_my">SMS</string>
    <string name="ulanish">ulanish</string>
    <string name="tarif_uz">Tarif</string>
    <string name="abonent_to_lovi">Abonent to\'lovi:</string>
    <string name="batafsil">Batafsil</string>
    <string name="operator_my">Operatr bilan bog\'lanish</string>
    <string name="update_tarif">Tarifni o\'zgartirish</string>
    <string name="news">Yangiliklar</string>
    <string name="aktivlashtirish">Aktivlashtirish</string>
    <string name="price">To\'plam narxi</string>
    <string name="chrafick">Berilgan trafik</string>
    <string name="day">Amalqilish muddati</string>
    <string name="active_ok">Faollashtirish</string>
    <string name="clouse">O\'chirish</string>
    <string name="user_price">Abonent to\'lovi oyiga</string>
    <string name="uzb">O\'zbekiston bo\'yicha</string>
    <string name="min1">daqiqa</string>
    <string name="my_internet">Mobile internet</string>
</resources>