<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/telegram"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_contacts"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/share"
            android:icon="@drawable/ic_share"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/favorities"
            android:icon="@drawable/ic_star"
            android:title="@string/menu_favorites" />
        <item
            android:id="@+id/info"
            android:icon="@drawable/ic_info_button"
            android:title="@string/menu_info" />

    </group>
</menu>