<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/dialog"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="@dimen/_280sdp"
        android:layout_height="@dimen/_120sdp">
        <TextView
            android:id="@+id/dialog_text"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sdp"
            android:text="@string/biz_bilan_aloqa"
            android:textStyle="normal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintVertical_bias="0.1"
            app:layout_constraintHorizontal_bias="0.08"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:textStyle="normal"
            android:id="@+id/email"
            android:text="Email:ussdmobile@gmail.com"
            android:textSize="@dimen/_13sdp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/dialog_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/dialog_text"
            app:layout_constraintVertical_bias="0.2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/send"
            android:textSize="@dimen/_11sdp"
            android:text="@string/xat_jo_natish"
            android:padding="5dp"
            android:textColor="#01B4FF"
            android:textStyle="normal"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.9"
            app:layout_constraintTop_toBottomOf="@id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/clouse"
            android:textSize="@dimen/_11sdp"
            android:text="@string/orqaga"
            android:padding="5dp"
            android:textColor="#01B4FF"
            android:textStyle="normal"
            app:layout_constraintRight_toLeftOf="@id/send"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.9"
            app:layout_constraintTop_toBottomOf="@id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

<!--    Mazkur ilova Uzmobile operatori mijozlariga qulaylik yaratish maqsadida ishlab chiqilgan bo'lib,sizning shaxsiy hisob varaqangizga va raqamingizga hech qanday zararli tomoni yo'q savol va takliflar bo'lsa @ussdchat Telegram orqali yozishingiz mumkin-->