<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_main">

    <fragment
        android:id="@+id/nav_host_fragment_content_main"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/custom_bottom"
        app:defaultNavHost="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navGraph="@navigation/mobile_navigation" />
    <LinearLayout
        android:id="@+id/custom_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:padding="@dimen/_5sdp"
        android:background="@drawable/bottom_navigation"
        android:layout_height="@dimen/_50sdp"/>
    <androidx.cardview.widget.CardView
        android:id="@+id/card_menu"
        app:cardCornerRadius="@dimen/_25sdp"
        android:layout_marginBottom="@dimen/_30sdp"
        app:layout_constraintTop_toTopOf="@id/custom_bottom"
        app:layout_constraintBottom_toBottomOf="@id/custom_bottom"
        app:layout_constraintLeft_toLeftOf="@id/custom_bottom"
        app:layout_constraintRight_toRightOf="@id/custom_bottom"
        android:layout_width="@dimen/_50sdp"
        app:cardElevation="0dp"
        android:foreground="?selectableItemBackground"
        android:clickable="true"
        android:backgroundTint="#FFD12D"
        android:focusable="true"
        android:layout_height="@dimen/_50sdp">
        <ImageView
            android:src="@drawable/ic_group_9"
            android:padding="@dimen/_13sdp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/card1"
        app:layout_constraintTop_toTopOf="@id/custom_bottom"
        app:layout_constraintBottom_toBottomOf="@id/custom_bottom"
        app:layout_constraintLeft_toLeftOf="@id/custom_bottom"
        app:layout_constraintRight_toRightOf="@id/custom_bottom"
        app:layout_constraintHorizontal_bias="0.01"
        app:cardCornerRadius="@dimen/_30sdp"
        android:layout_width="@dimen/_60sdp"
        app:cardElevation="0dp"
        android:backgroundTint="@android:color/transparent"
        android:foreground="?selectableItemBackgroundBorderless"
        android:clickable="true"
        android:focusable="true"
        android:layout_height="@dimen/_60sdp">
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:src="@drawable/ic_group_12"
                android:id="@+id/image_balans"
                app:layout_constraintVertical_bias="0.3"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"/>

            <TextView
                android:id="@+id/balans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:gravity="center"
                android:text="@string/balans"
                android:textColor="#68D2FF"
                android:textSize="@dimen/_9sdp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/card2"
        app:layout_constraintTop_toTopOf="@id/card1"
        app:layout_constraintBottom_toBottomOf="@id/card1"
        app:layout_constraintLeft_toRightOf="@id/card1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.02"
        android:backgroundTint="@android:color/transparent"
        app:cardElevation="0dp"
        android:foreground="?selectableItemBackgroundBorderless"
        android:focusable="true"
        android:clickable="true"
        app:cardCornerRadius="@dimen/_30sdp"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_60sdp">
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:src="@drawable/ic_group_13"
                android:id="@+id/image_operator"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"/>
            <TextView
                android:id="@+id/operator"
                android:textColor="#68D2FF"
                android:text="@string/operator"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/_2sdp"
                android:textSize="@dimen/_9sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/card3"
        app:layout_constraintTop_toTopOf="@id/card2"
        app:layout_constraintBottom_toBottomOf="@id/card2"
        app:layout_constraintLeft_toRightOf="@id/card2"
        app:layout_constraintRight_toLeftOf="@id/card4"
        app:layout_constraintHorizontal_bias="0.98"
        app:cardCornerRadius="@dimen/_30sdp"
        app:cardElevation="0dp"
        android:backgroundTint="@android:color/transparent"
        android:foreground="?selectableItemBackgroundBorderless"
        android:clickable="true"
        android:focusable="true"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_60sdp">
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:src="@drawable/ic_group_11"
                android:id="@+id/image_new"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"/>

            <TextView
                android:id="@+id/news"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:gravity="center"
                android:text="@string/yangiliklar"
                android:textColor="#68D2FF"
                android:textSize="@dimen/_9sdp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/card4"
        app:layout_constraintTop_toTopOf="@id/card2"
        app:layout_constraintBottom_toBottomOf="@id/card2"
        app:layout_constraintLeft_toRightOf="@id/card2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.98"
        app:cardCornerRadius="@dimen/_30sdp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?selectableItemBackgroundBorderless"
        android:backgroundTint="@android:color/transparent"
        app:cardElevation="0dp"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_60sdp">
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:src="@drawable/ic_group_10"
                android:id="@+id/image_news"
                app:layout_constraintVertical_bias="0.3"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"/>
            <TextView
                android:id="@+id/settings"
                android:textColor="#68D2FF"
                android:text="@string/sozlamalar"
                android:layout_marginTop="@dimen/_2sdp"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="@dimen/_9sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>