<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#01B4FF"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.definition.DefinitionFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cons1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/backgraund_app"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.85"
        tools:layout_editor_absoluteX="0dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cons_card"
        app:layout_constraintTop_toTopOf="@id/cons1"
        app:layout_constraintBottom_toTopOf="@id/cons1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_130sdp">
        <androidx.constraintlayout.widget.ConstraintLayout
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="0dp"
            android:layout_height="0sp"
            app:layout_constraintWidth_percent="0.85"
            app:layout_constraintHeight_percent="0.9"
            android:background="@drawable/card">
            <TextView
                android:id="@+id/tv1"
                android:text="Просто 10"
                android:textColor="#FFD12D"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.05"
                android:textSize="@dimen/_20sdp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:id="@+id/icon1"
                app:layout_constraintTop_toBottomOf="@id/tv1"
                app:layout_constraintLeft_toLeftOf="parent"
                android:background="@drawable/icon"
                app:layout_constraintVertical_bias="0.1"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.2"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp">
                <ImageView
                    android:layout_weight="1"
                    android:src="@drawable/ic_phone"
                    android:padding="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>
            <TextView
                android:id="@+id/text_min"
                app:layout_constraintTop_toBottomOf="@id/icon1"
                app:layout_constraintLeft_toLeftOf="@id/icon1"
                app:layout_constraintRight_toRightOf="@id/icon1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.1"
                android:textSize="@dimen/_11sdp"
                android:textStyle="normal"
                android:textColor="#FFD12D"
                android:text="10 MIN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:id="@+id/icon2"
                app:layout_constraintTop_toTopOf="@id/icon1"
                app:layout_constraintLeft_toRightOf="@id/icon1"
                android:background="@drawable/icon"
                app:layout_constraintVertical_bias="0.1"
                app:layout_constraintRight_toLeftOf="@id/icon3"
                app:layout_constraintBottom_toBottomOf="@id/icon1"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp">
                <ImageView
                    android:src="@drawable/ic_group"
                    android:padding="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>
            <TextView
                android:id="@+id/text_mb"
                app:layout_constraintTop_toBottomOf="@id/icon2"
                app:layout_constraintLeft_toLeftOf="@id/icon2"
                app:layout_constraintRight_toRightOf="@id/icon2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.1"
                android:textSize="@dimen/_11sdp"
                android:textStyle="normal"
                android:textColor="#FFD12D"
                android:text="10 MB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:id="@+id/icon3"
                app:layout_constraintTop_toTopOf="@id/icon1"
                app:layout_constraintLeft_toRightOf="@id/icon1"
                android:background="@drawable/icon"
                app:layout_constraintVertical_bias="0.2"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/icon1"
                app:layout_constraintHorizontal_bias="0.7"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp">
                <ImageView
                    android:src="@drawable/ic_message_square"
                    android:padding="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>
            <TextView
                android:id="@+id/text_sms"
                app:layout_constraintTop_toBottomOf="@id/icon3"
                app:layout_constraintLeft_toLeftOf="@id/icon3"
                app:layout_constraintRight_toRightOf="@id/icon3"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.1"
                android:textSize="@dimen/_11sdp"
                android:textStyle="normal"
                android:textColor="#FFD12D"
                android:text="10 SMS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/summ"
                android:textColor="#68D2FF"
                android:textStyle="bold"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintTop_toBottomOf="@id/text_min"
                app:layout_constraintLeft_toLeftOf="@id/text_min"
                app:layout_constraintRight_toRightOf="@id/text_sms"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="10 000 сум в месяц"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
        android:id="@+id/name"
        app:layout_constraintTop_toBottomOf="@id/cons_card"
        app:layout_constraintLeft_toLeftOf="@id/cons_card"
        app:layout_constraintRight_toRightOf="@id/cons_card"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.05"
        android:text="Shunchaki 10"
        android:maxLines="1"
        app:layout_constraintWidth_percent="0.8"
        android:gravity="center"
        android:textSize="@dimen/_15sdp"
        android:textStyle="normal"
        android:textColor="#228BD6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/summ_user"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintHorizontal_bias="0.05"
        android:textColor="@color/black"
        android:textStyle="normal"
        android:layout_marginLeft="@dimen/_5sdp"
        android:textSize="@dimen/_12sdp"
        android:text="@string/abonent_to_lovi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/summ_money"
        app:layout_constraintLeft_toRightOf="@id/summ_user"
        app:layout_constraintTop_toTopOf="@id/summ_user"
        app:layout_constraintBottom_toBottomOf="@id/summ_user"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="@dimen/_5sdp"
        app:layout_constraintHorizontal_bias="0.92"
        android:text="10.000 so'm"
        android:textSize="@dimen/_12sdp"
        android:textStyle="normal"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:id="@+id/line"
        app:layout_constraintTop_toBottomOf="@id/summ_user"
        app:layout_constraintLeft_toLeftOf="@id/summ_user"
        app:layout_constraintRight_toRightOf="@id/summ_money"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.02"
        android:background="#C5C1C1"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:orientation="horizontal" />
    <TextView
        android:id="@+id/info"
        app:layout_constraintTop_toBottomOf="@id/line"
        app:layout_constraintLeft_toLeftOf="@id/line"
        app:layout_constraintRight_toRightOf="@id/line"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/app_name"
        android:maxLines="14"
        android:textSize="@dimen/_11sdp"
        android:textStyle="normal"
        android:textColor="@color/black"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintVertical_bias="0.08"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/all"
        app:layout_constraintTop_toBottomOf="@id/info"
        app:layout_constraintLeft_toLeftOf="@id/info"
        android:textColor="@color/white"
        android:textStyle="normal"
        android:textSize="@dimen/_12sdp"
        android:text="@string/batafsil"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/button1"
        app:layout_constraintWidth_percent="0.3"
        app:layout_constraintVertical_bias="0.83"
        android:layout_width="0dp"
        android:layout_height="@dimen/_30sdp"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/connect"
       app:layout_constraintRight_toRightOf="@id/info"
        app:layout_constraintTop_toBottomOf="@id/info"
        android:textColor="@color/white"
        android:textStyle="normal"
        android:textSize="@dimen/_11sdp"
        android:text="Ulanish"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/button1"
        app:layout_constraintWidth_percent="0.48"
        app:layout_constraintVertical_bias="0.83"
        android:layout_width="0dp"
        android:layout_height="@dimen/_30sdp"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/connect1"
        app:layout_constraintRight_toRightOf="@id/info"
        app:layout_constraintTop_toBottomOf="@id/info"
        android:textColor="@color/white"
        android:textStyle="normal"
        android:textSize="@dimen/_11sdp"
        android:text="Ulanish"
        android:visibility="gone"
        android:textAllCaps="true"
        app:layout_constraintLeft_toLeftOf="@id/info"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/button1"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintVertical_bias="0.8"
        android:layout_width="0dp"
        android:layout_height="@dimen/_30sdp"/>

</androidx.constraintlayout.widget.ConstraintLayout>